--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -7,7 +7,10 @@
     <link href="{{ asset('build/app.css') }}" rel="stylesheet">
     {% block stylesheets %}
         <style>
-            
+            .navbar-rose-powdery {
+                background-color: rgba(255, 192, 203, 0.8) !important; /* Rose powdery color */
+                transition: background-color 0.5s ease;
+            }
         </style>
     {% endblock %}
 </head>
