Création du formulaire d'ajout de job

--- a/templates/nav.html.twig
+++ b/templates/nav.html.twig
@@ -15,6 +15,10 @@
                 <a class="nav-link" href="{{ path('job_list') }}">Liste d'offres d'emplois</a>
             </li>
             <li class="nav-item">
+                <a class="nav-link" href="{{ path('job_new') }}">Créer une offre</a>
+            </li>
+             
+            <li class="nav-item">
                 <a class="nav-link" href="{{ path('newsletter_subscribe') }}">Newsletter</a>
             </li>
         </ul>
